--- a/RPC-Server/pom.xml
+++ b/RPC-Server/pom.xml
@@ -15,6 +15,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.8.1</version>
+    </dependency>
+    <dependency>
       <groupId>org.ExpBoot</groupId>
       <artifactId>RPC-Util</artifactId>
       <version>1.0-SNAPSHOT</version>
