--- a/RPC-Client/pom.xml
+++ b/RPC-Client/pom.xml
@@ -21,6 +21,11 @@
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>4.1.42.Final</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>RPC-Client</finalName>
