--- a/RPC-Server/pom.xml
+++ b/RPC-Server/pom.xml
@@ -25,6 +25,11 @@
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>4.1.42.Final</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>RPC-Server</finalName>
