--- a/RPC-Client/pom.xml
+++ b/RPC-Client/pom.xml
@@ -26,6 +26,11 @@
       <artifactId>netty-all</artifactId>
       <version>4.1.42.Final</version>
     </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.83</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>RPC-Client</finalName>
