--- a/RPC-Server/pom.xml
+++ b/RPC-Server/pom.xml
@@ -30,7 +30,13 @@
       <artifactId>netty-all</artifactId>
       <version>4.1.42.Final</version>
     </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.83</version>
+    </dependency>
   </dependencies>
+
   <build>
     <finalName>RPC-Server</finalName>
   </build>
