--- a/RPC-Util/pom.xml
+++ b/RPC-Util/pom.xml
@@ -18,5 +18,15 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.83</version>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>4.1.42.Final</version>
+    </dependency>
   </dependencies>
 </project>
