Prerequisites Before adding the service registration feature. 1. Add dependency of curator framework, to implement service registry feature. 2. Adjust the Module structure. Let the Mini-RPC module as a parent module. Parent Pom could control whole project dependency.

--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,36 @@
             <version>5.8.1</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.34</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.83</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.42.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>5.1.0</version>
+        </dependency>
     </dependencies>
+
+    <modules>
+        <module>RPC-Client</module>
+        <module>RPC-Server</module>
+        <module>RPC-Util</module>
+    </modules>
 </project>
